<resources>
    <string name="app_name">FutureUP</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="live_prices">Live Prices</string>
    <string name="balance">Balance</string>
    <string name="hash">****</string>
    <string name="holder">CARD HOLDER</string>
    <string name="coin_value">$%s</string>
    <string name="portfolio">Portfolio</string>
    <string name="card_number">1234</string>
    <string name="no_network_available">No network available</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_new_coins">Add new coins</string>
</resources>