<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/yourWalletTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_20dp"
        android:layout_marginTop="@dimen/margin_size_20dp"
        android:fontFamily="@font/avenirltstd_roman"
        android:text="@string/your_wallet"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/walletCardView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="@dimen/margin_size_25dp"
        android:layout_marginTop="@dimen/margin_size_20dp"
        android:layout_marginEnd="@dimen/margin_size_25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yourWalletTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_gradient"
            android:orientation="vertical">

            <TextView
                android:id="@+id/balanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_25dp"
                android:layout_marginTop="@dimen/margin_size_20dp"
                android:fontFamily="@font/avenirltstd_roman"
                android:text="@string/balance"
                android:textColor="@color/blue_gray"
                android:textSize="@dimen/text_size_9sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/balance_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirltstd_black"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/balanceTextView"
                app:layout_constraintTop_toBottomOf="@id/balanceTextView" />

            <TextView
                android:id="@+id/hash1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_25dp"
                android:fontFamily="@font/avenirltstd_black"
                android:text="@string/hash"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/holderNameTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balanceTextView" />

            <TextView
                android:id="@+id/hash2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirltstd_black"
                android:text="@string/hash"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/hash1"
                app:layout_constraintEnd_toStartOf="@id/hash3"
                app:layout_constraintStart_toEndOf="@id/hash1"
                app:layout_constraintTop_toTopOf="@id/hash1" />

            <TextView
                android:id="@+id/hash3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirltstd_black"
                android:text="@string/hash"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/hash1"
                app:layout_constraintEnd_toStartOf="@id/hash4"
                app:layout_constraintStart_toEndOf="@id/hash2"
                app:layout_constraintTop_toTopOf="@id/hash1" />

            <TextView
                android:id="@+id/hash4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_size_25dp"
                android:fontFamily="@font/avenirltstd_black"
                android:text="@string/hash"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/hash1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/hash1" />

            <TextView
                android:id="@+id/holderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_25dp"
                android:layout_marginBottom="@dimen/margin_size_5dp"
                android:fontFamily="@font/avenirltstd_roman"
                android:text="@string/holder"
                android:textColor="@color/blue_gray"
                android:textSize="@dimen/text_size_9sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/holderNameTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/holderNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_25dp"
                android:layout_marginBottom="@dimen/margin_size_20dp"
                android:fontFamily="@font/avenirltstd_black"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/livePricesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_20dp"
        android:layout_marginTop="@dimen/margin_size_20dp"
        android:fontFamily="@font/avenirltstd_book"
        android:text="@string/live_prices"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/walletCardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/livePricesTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>